# alpha-project-arena

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
ara/: __init__.py  __main__.py  battle.py  chart.py  cli.py  colors.py  console.py  core.py  dashboard.py  display.py  generate_stars.py  history.py  insight.py  rank.py  report.py  summary.py  trends.py
ara.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
demo/: demo-battle.txt  demo-help.txt  demo-info.txt  demo-stars.txt
scripts/: demo.py
tests/: __init__.py  conftest.py  test_battle.py  test_chart.py  test_cli.py  test_compare.py  test_core.py  test_dashboard.py  test_display.py  test_generate_stars.py  test_history.py  test_info.py  test_insight.py  test_rank.py  test_summary.py  test_trends.py  test_watch.py
