[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests",
]
addopts = [
    "-q",
    "--tb=short",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
python_files = [
    "test_*.py",
]
python_functions = [
    "test_*",
]

[tool.ruff]
src = ["ara", "tests"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "PL",  # pylint
    "RUF", # ruff-specific
]
ignore = [
    "E501",    # line-too-long (handled by formatter)
    "N802",    # allow lowercase function names
    "N803",    # allow lowercase argument names
    "PLR2004", # magic-value-comparison
    "PLC0415", # allow lazy/guarded imports (plyer, optional deps)
    "PLR0911", # allow functions with many return statements
    "PLR0912", # allow functions with many branches
    "PLR0915", # allow functions with many statements
    "PLW2901", # allow loop variable reassignment
    "RUF001",  # allow ambiguous unicode chars (en-dash in output)
]

[tool.coverage.run]
source = ["ara"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
